# python.or.kr-wip

./: .env.sample  .gitignore  Dockerfile  README.md  deploy_prod.sh  deploy_static.sh  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml  deploy_static.yml  testing.yml
pythonkr_backend/: fixtures.json  manage.py
pythonkr_backend/curation/: admin.py  models.py  tasks.py  test_admin.py  test_copyright_analysis.py  test_language_detection.py  test_llm_service.py  test_newsletter_extraction.py  test_tasks.py  test_utils.py  test_views.py  tests.py  urls.py  utils.py  utils_copyright.py  utils_language.py  utils_newsletter.py  utils_trans.py  views.py
pythonkr_backend/curation/migrations/: 0001_initial.py  0002_article_reading_time_minutes.py  0003_article_summary_ko.py  0004_alter_article_reading_time_minutes.py  0005_category.py  0006_article_categories.py  0007_crawlingsources_rssfeed_crawlingsite_crawlurl_and_more.py  0008_rssitem_crawled_content_rssitem_crawling_status.py  0009_rssitem_crawled_at_rssitem_error_message.py  0010_llmservice_llmusage.py  0011_alter_llmusage_date.py  0012_llmusage_total_tokens.py  0013_translatedcontent.py  0014_rssitem_translate_error_message_and_more.py  0015_rssfeed_is_newsletter_rssitem_attribution_required_and_more.py
pythonkr_backend/curation/templates/curation/: translated_content_detail.html
pythonkr_backend/pythonkr/: apps.py  models.py  tasks.py  tests.py
pythonkr_backend/pythonkr/fixtures/: pythonkr.json
pythonkr_backend/pythonkr/migrations/: 0001_initial.py  0002_pkevent_pkevents.py  0003_pkevent_short_description.py
pythonkr_backend/pythonkr/templates/pao/: pao_events.html  pao_people.html
pythonkr_backend/pythonkr/templates/pythonkr/: event.html  event_list.html  pao_communites.html  pao_event.html  pao_person.html  pao_sponsor.html  pao_sponsors.html  pk_base.html  pk_home.html  pk_markdown_doc.html  pk_page.html
pythonkr_backend/pythonkr_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
pythonkr_backend/pythonkr_backend/settings/: base.py  localtesting.py  prod.py
pythonkr_backend/theme/static_src/: package-lock.json  package.json  tailwind.config.js
pythonkr_backend/theme/static_src/src/: styles.css
